# drive_manager

./: .gitignore  CMakeLists.txt  Creator.qml  Logger.qml  Main.qml  MainScreen.qml  README.md  backend.h  backend_jni.cpp  main.cpp
android/: AndroidManifest.xml  build.gradle
android/src/com/example/untitled/: AuthHelper.java  MainActivity.java  QtBridge.java
